# file-clean-rust

./: .gitignore  Cargo.toml  README.md  cleanup-patterns.yml.sample  monitor-dir.sh
.github/workflows/: rust.yml
src/: cli.rs  data.rs  main.rs  main.txt  p2tree.rs  pconfig.rs  pmatcher.rs  tprint.rs  util.rs
src/fnmatch_regex/: error.rs  glob.rs  mod.rs
