[package]
name = "file-clean-rust"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.7", features = ["cargo", "derive", "string"] }
colored = "2.1.0"
dirs-next = "2.0.0"
fancy-regex = "0.13.0"
itertools = "0.13.0"
md-5 = { version = "0.10.6", features = ["md5-asm"] }
quick-error = "2.0.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_yaml = "0.9.34"
slab_tree = "0.3.2"
walkdir = "2.5.0"

[profile.release]
lto = true
opt-level = "s"
strip = true
